<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.UserRegistrationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/actionbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/log_in_to_nest_js"
                android:textColor="@android:color/black"
                android:textSize="32sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="@string/phone_number_email_address_or_username" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:hint="@string/password" />

            <TextView
                android:id="@+id/etRecoverPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:text="@string/forgotten_your_password"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ddd" />

            <Button
                android:id="@+id/btnLogin"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:layout_gravity="end"
                android:layout_margin="10sp"
                android:elevation="8sp"
                android:text="Log in"
                android:textAllCaps="false"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>