<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp"
    tools:context=".ui.OnBoardActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo"
            android:contentDescription="Upper twitter logo"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="20sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTagline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tagline"
                android:textSize="32sp"
                android:textColor="@android:color/black"/>


            <Button
                android:id="@+id/btnCreateAccount"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:elevation="8sp"
                android:textSize="22sp"
                android:textAllCaps="false"
                android:text="@string/create_account" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="10sp"
            android:text="@string/have_an_account"
            android:textSize="16sp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>